<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>

    <string name="app_name">YourHome</string>
    <string name="app_name_plus">YourHome+</string>
    <string name="title_choose_color">Select color</string>
    <string name="title_choose_playlist">Select playlist</string>
    <string name="title_enter_pin">Enter Pin</string>
    <string name="title_manual_entry">Manual entry</string>
    <string name="title_new_widget">Create new widget</string>
    <string name="title_choose_date_time">Choose date and time</string>

    <string name="drawer_settings">Settings</string>
    <string name="widget_create">Create</string>
    <string name="widget_cancel">Cancel</string>
    <string name="widget_choose">Choose</string>
    <string name="widget_activate_scene">Activate scene</string>
    <string name="error_loading_configuration">There was an error with loading the configuration. Please try again.</string>


    <string name="title_server_discovery">Locate YourHome server</string>
    <string name="btn_discover">Search</string>
    <string name="btn_discover_searching">Searching</string>
    <string name="btn_discover_cancel">Cancel</string>
    <string name="discovery_searching">Searching for YourHome servers in your network...</string>
    <string name="discovery_description">Let\'s start by adding a YourHome server. Make sure your server is running and that your device is connected to the same network. Click on search when you are ready.</string>
    <string name="discovery_no_published_configurations">It seems that there are no configurations published yet. Please navigate to YourHome Designer on a PC at the following adress and start building your layout:</string>
    <string name="discovery_upgrade_to_plus">(Upgrade to plus to use)</string>
    <string name="discovery_unnamed">Unnamed</string>


    <string name='discover_action_set_server'>Set as YourHome Server</string>
    <string name="lbl_hostname">Primary (eg demo.yourhomeapp.net)</string>
    <string name="lbl_ext_hostname">Alternative IP/Hostname (optional)</string>
    <string name="discover_action_title">Choose layout configuration</string>

    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_manual">Manual entry</string>
    <string name="btn_export">Export</string>
    <string name="btn_close">Close</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_options">Options</string>
    <string name="btn_back">Back</string>
    <string name="btn_info">Info</string>
    <string name="btn_ports">Ports</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_delete">Del</string>

    <string name="wifi_enabled">Wifi is enabled</string>
    <string name="wifi_enabling">Wifi is enabling</string>
    <string name="wifi_disabling">Wifi is disabling</string>
    <string name="wifi_disabled">Wifi is disabled</string>
    <string name="wifi_scanning">Wifi is scanning</string>
    <string name="wifi_associating">Wifi is associating with %s</string>
    <string name="wifi_dhcp">Obtaining IP address from %s</string>
    <string name="wifi_unknown">Wifi state unknown</string>

    <string name="net_ip">IP: %1$s/%2$d (%3$s)</string>
    <string name="net_carrier">CARRIER: %s</string>
    <string name="net_ssid">SSID: %s</string>
    <string name="net_mode">MODE: %s</string>
    <string name="net_mode_wifi">WiFi (%1$s %2$s)</string>
    <string name="net_mode_mobile">Mobile</string>
    <string name="net_mode_eth">Ethernet (Not supported yet)</string>
    <string name="net_mode_unknown">Unknown</string>
    <string name='discover_action_set_external_hostname'>Set external hostname/ip</string>
    <string name="discover_start">Discovery started ...</string>
    <string name="discover_finished">Discovery finished !</string>
    <string name="discover_canceled">Discovery canceled !</string>
    <string name="discover_proxy_title">Proxy Error</string>
    <string name="discover_proxy_msg">Discovery is canceled, because a mac address appeared multiple times, you probably are behind a proxy.\n\nGo to your Gateway from the browser : http://%s</string>
    <string name="discover_root_title">Installation: Root</string>
    <string name="discover_root_install">Do you want to install the scan daemon for root ?</string>
    <string name="discover_root_restart">Restarting application ...</string>


    <string name="server_discovery">Server discovery</string>
    <string name="server_manual_input">Manual input</string>
    <string name="server_ip_address">IP Address of YourHome server</string>
    <string name="scan_start">Scan started ...</string>
    <string name="scan_finished">Scan finished !</string>
    <string name="scan_canceled">Scan canceled !</string>
    <string name="scan_open">Open (%s)</string>
    <string name="scan_closed">Closed (%s)</string>
    <string name="scan_host_unreachable">Host unreachable !</string>
    <string name="scan_banner_title">Port %s/tcp</string>

    <string name="info_time">Response time:</string>
    <string name="info_mac">MAC Address:</string>
    <string name="info_nic">NIC vendor:</string>
    <string name="info_ports_open">Open ports:</string>
    <string name="info_ports_closed">Closed ports:</string>
    <string name="info_unknown">Unknown</string>

    <string name="time">Time</string>
    <string name="temperature">Temperature</string>
    <string name="playlists">Please choose a playlist:</string>
    <string name="playlistsArtist">Artist</string>
    <string name="playlistsTitle">Title</string>
    <string name="spotify_choose_account">Choose account:</string>


    <string name="title_disconnected">Disconnected</string>
    <string name="title_connecting">Connecting&#8230;</string>
    <string name="title_imageerror">Error on loading images</string>


</resources>
